# studio-scaffold

./: .gitignore  README.md  idx-template.json  main.py  pyproject.toml  requirements.txt
.idx/: dev.nix  idx-template.json
components/: header.py  page_scaffold.py  side_nav.py  styles.py
pages/: another.py  gemini2.py  home.py
set_up/: model_setup.py
state/: state.py
