[project]
name = "studio-scaffold"
version = "0.1.0"
description = "A web app scaffold for Mesop studio style apps"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "google-genai>=1.10.0",
    "gunicorn>=23.0.0",
    "mesop>=1.0.1",
    "tenacity>=9.1.2",
    "werkzeug>=3.1.3",
]
